--- a/docs/stylesheets/page-hero.css
+++ b/docs/stylesheets/page-hero.css
@@ -35,7 +35,7 @@ body:not(.md-home) .md-content {
   right: 0;
   top: 0;
   height: 90%;
-  background: url("../assets/hero_background.png") center / cover no-repeat;
+  background: url("../assets/images/hero_background.png") center / cover no-repeat;
   -webkit-mask-image: linear-gradient(
     to bottom,
     rgba(0, 0, 0, 1) 60%,
@@ -65,7 +65,7 @@ body:not(.md-home) .md-content {
       rgba(0, 0, 0, 0) 95%,
       var(--md-default-bg-color) 100%
     ),
-    url("../assets/hero_flower.png") center bottom / 100% auto no-repeat;
+    url("../assets/images/hero_flower.png") center bottom / 100% auto no-repeat;
   transform: translateY(var(--hero-flower-offset, 0px));
   will-change: transform;
   pointer-events: none;
